--- a/src/theme/Navbar/Logo/Logo.module.css
+++ b/src/theme/Navbar/Logo/Logo.module.css
@@ -32,9 +32,3 @@
     font-size: 28px;
   }
 }
-
-@media screen and (min-width: 1441px) {
-  .navbar-logo {
-    margin-inline-end: 3%;
-  }
-}
